[gd_scene load_steps=4 format=2]

[ext_resource path="res://projectiles/bullet_combhat.png" type="Texture" id=1]
[ext_resource path="res://projectiles/bullet_combhat.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="bullet_combhat" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ray0" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 4

[node name="ray1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 4

[node name="ray2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 4

[node name="ray3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 4
